--- a/core/lang/ru.json
+++ b/core/lang/ru.json
@@ -1,8 +1,9 @@
 {
     "errors": {
         "0": "Функция недоступна",
-        "1": "неверный(е) аргумент(ы)",
+        "1": "Отсутсвует важный аргумент(ы)",
         "2": "Недопустимое значение для marker_id",
-        "3": "marker_id значение отсутствует"
+        "3": "marker_id значение отсутствует",
+        "4": "Неверно выбран язык"
     }
 }
