--- a/core/lang/ru.json
+++ b/core/lang/ru.json
@@ -4,6 +4,7 @@
         "1": "Отсутсвует важный аргумент(ы)",
         "2": "Недопустимое значение для marker_id",
         "3": "marker_id значение отсутствует",
-        "4": "Неверно выбран язык"
+        "4": "Неверно выбран язык",
+        "5": "Внутренняя ошибка сервера"
     }
 }
