Function is unavailable didn't work
Now error 0 moved into error 6

--- a/core/lang/en.json
+++ b/core/lang/en.json
@@ -1,10 +1,10 @@
 {
     "errors": {
-        "0": "Function is unavailable",
         "1": "Important argument(s) doesn't exist",
         "2": "Invalid value for marker_id",
         "3": "marker_id value excepts",
         "4": "Wrong language parameter",
-        "5": "Internal server error"
+        "5": "Internal server error",
+        "6": "Function is unavailable"
     }
 }
