--- a/core/lang/ru.json
+++ b/core/lang/ru.json
@@ -1,10 +1,10 @@
 {
     "errors": {
-        "0": "Функция недоступна",
         "1": "Отсутсвует важный аргумент(ы)",
         "2": "Недопустимое значение для marker_id",
         "3": "marker_id значение отсутствует",
         "4": "Неверно выбран язык",
-        "5": "Внутренняя ошибка сервера"
+        "5": "Внутренняя ошибка сервера",
+        "6": "Функция недоступна"
     }
 }
