--- a/core/lang/ru.json
+++ b/core/lang/ru.json
@@ -5,6 +5,7 @@
         "3": "marker_id значение отсутствует",
         "4": "Неверно выбран язык",
         "5": "Внутренняя ошибка сервера",
-        "6": "Функция недоступна"
+        "6": "Функция недоступна",
+        "7": "Такой метки не существует"
     }
 }
